not init, not final

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         
         <button class="save-btn" onclick="saveToDB()">Save Todo List to Database</button>
     </div>
+    <footer>made by Hardik Kumar Sinha | Ecel recruitment 2025</footer>
 
     <script src="scripted.js"></script>
 </body>
